# pyvidia-update

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: nvidia-dropdown-values.pkl
pyvidia_update/: version_check.py
pyvidia_update/source/: get_current_driver_version.py  get_data.py  get_files.py  get_system_info.py  user_saved_data.py
pyvidia_update/ui/: app.py  config.py  notifications.py  tray.py
scraper/: nvidia_driver_dropdowns.py
